--- a/buidspec.yml
+++ b/buidspec.yml
@@ -1,23 +1,24 @@
 version: 0.2
 
+env:
+  variables:
+    BUCKET_NAME: "my-demo-tf-bucket"
+    AWS_REGION: "us-east-1"
+
 phases:
   install:
     commands:
       - echo Installing Terraform...
-      - curl -O https://releases.hashicorp.com/terraform/1.7.5/terraform_1.7.5_linux_amd64.zip
-      - unzip terraform_1.7.5_linux_amd64.zip
+      - curl -O https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip
+      - unzip terraform_1.5.7_linux_amd64.zip
       - mv terraform /usr/local/bin/
-  pre_build:
-    commands:
-      - echo Starting Terraform INIT...
-      - terraform init
+
   build:
     commands:
-      - echo Running Terraform APPLY...
+      - terraform init
+      - terraform plan -input=false \
+          -var="bucket_name=$BUCKET_NAME" \
+          -var="region=$AWS_REGION"
       - terraform apply -auto-approve \
-          -var="bucket_name=my-demo-bucket-project" \
-          -var="region=us-east-1"
-artifacts:
-  files:
-    - "**/*"
-
+          -var="bucket_name=$BUCKET_NAME" \
+          -var="region=$AWS_REGION"
