--- a/buidspec.yml
+++ b/buidspec.yml
@@ -4,25 +4,25 @@ phases:
   install:
     commands:
       - echo Installing Terraform...
-      - curl -O https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip
-      - unzip terraform_1.5.7_linux_amd64.zip
-      - mv terraform /usr/local/bin/
-      - pip install --upgrade awscli
+      # - curl -O https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip
+      # - unzip terraform_1.5.7_linux_amd64.zip
+      # - mv terraform /usr/local/bin/
+      # - pip install --upgrade awscli
 
   build:
     commands:
       - echo "Initializing Terraform..."
-      - terraform init
+      # - terraform init
 
-      - echo "Planning Terraform..."
-      - terraform plan -input=false \
-          -var="bucket_name=$BUCKET_NAME" \
-          -var="region=$AWS_REGION"
+      # - echo "Planning Terraform..."
+      # - terraform plan -input=false \
+      #     -var="bucket_name=$BUCKET_NAME" \
+      #     -var="region=$AWS_REGION"
 
-      - echo "Applying Terraform..."
-      - terraform apply -auto-approve \
-          -var="bucket_name=$BUCKET_NAME" \
-          -var="region=$AWS_REGION"
+      # - echo "Applying Terraform..."
+      # - terraform apply -auto-approve \
+      #     -var="bucket_name=$BUCKET_NAME" \
+      #     -var="region=$AWS_REGION"
 
-      - echo "Uploading sample data..."
-      - aws s3 cp sample_data/ s3://$BUCKET_NAME/ --recursive
+      # - echo "Uploading sample data..."
+      # - aws s3 cp sample_data/ s3://$BUCKET_NAME/ --recursive
