--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,5 +24,5 @@ phases:
       - terraform apply -auto-approve -var="bucket_name=$BUCKET_NAME" -var="region=$AWS_REGION"
 
       - echo "Uploading sample data..."
-      - aws s3 cp sample_data/ s3://$BUCKET_NAME/ --recursive
+      - aws s3 cp sample-data/ s3://$BUCKET_NAME/ --recursive
 
